# cookiecutter-dinkin-flicka

./: .flake8  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  cookiecutter.json  noxfile.py  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py  index.md  requirements.txt
presentation/: conf.py  index.rst  requirements.txt
tests/: __init__.py  test_cookiecutter_dinkin_flicka.py  test_main.py
{{cookiecutter.project_name}}/: .gitignore  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  {% if cookiecutter.license != 'None' -%} LICENSE {%- endif %}
{{cookiecutter.project_name}}/.github/workflows/: dependabot_autoaprove.yml  release.yml
{{cookiecutter.project_name}}/docs/: conf.py  index.md  requirements.txt  usage.md
{{cookiecutter.project_name}}/src/{{ cookiecutter.__package_slug }}/: __init__.py  __main__.py
{{cookiecutter.project_name}}/tests/: __init__.py  test_main.py  test_{{ cookiecutter.__package_slug }}.py
